--- a/Lab02 - Connected Components/lab03.ipynb
+++ b/Lab02 - Connected Components/lab03.ipynb
@@ -38,52 +38,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Texto cifrado: b'b8f46b59197e46fdfcc3e5177d088425'\n",
-      "Texto original: b'\\xab#0_\\x05V\\xbeodo!'\n"
-     ]
-    }
-   ],
-   "source": [
-    "from Crypto.Cipher import DES3\n",
-    "import binascii\n",
-    "\n",
-    "# Chave de criptografia de 24 bytes\n",
-    "key = b'0123456789abcdef01234567'\n",
-    "\n",
-    "# Dados a serem criptografados\n",
-    "data = b'Ola, mundo!'\n",
-    "\n",
-    "# Adiciona padding nos dados\n",
-    "padding = b' ' * (8 - (len(data) % 8))\n",
-    "padded_data = data + padding\n",
-    "\n",
-    "# Criptografando os dados\n",
-    "cipher = DES3.new(key, DES3.MODE_ECB)\n",
-    "ciphertext = cipher.encrypt(padded_data)\n",
-    "\n",
-    "# Imprime o resultado em hexadecimal\n",
-    "print('Texto cifrado:', binascii.hexlify(ciphertext))\n",
-    "\n",
-    "# Descriptografando os dados\n",
-    "decipher = DES3.new(key, DES3.MODE_ECB)\n",
-    "plaintext = decipher.decrypt(ciphertext)\n",
-    "\n",
-    "# Remove o padding dos dados descriptografados\n",
-    "unpadded_plaintext = plaintext.rstrip()\n",
-    "\n",
-    "# Imprime o resultado\n",
-    "print('Texto original:', unpadded_plaintext)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -165,7 +119,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -176,13 +129,12 @@
     "clc3thr1\n",
     "![clc3thr1.png](clc3thr1.png)\n",
     "clc3lab1\n",
-    "![clc3lab1.png](clc3lab1.png)\n",
-    "\t\t"
+    "![clc3lab1.png](clc3lab1.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -200,11 +152,11 @@
     "# Carrega a imagem em escala de cinza\n",
     "img = cv2.imread('clc3.png', 0)\n",
     "\n",
-    "# Binariza a imagem com threshold = 167\n",
+    "# Binariza a imagem com threshold = 150\n",
     "ret, thresh = cv2.threshold(img, 150, 255, cv2.THRESH_BINARY)\n",
     "\n",
     "# Inverte a imagem binarizada\n",
-    "thresh_inv = cv2.bitwise_not(thresh)\n",
+    "thresh_inv = 255 - thresh \n",
     "\n",
     "# Cria uma imagem preta com as mesmas dimensões da imagem invertida\n",
     "labels = np.zeros_like(thresh_inv)\n",
