--- a/Lab02 - Connected Components/lab03.ipynb
+++ b/Lab02 - Connected Components/lab03.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -73,8 +73,8 @@
     "viz = 8\n",
     "\n",
     "# Percorre a imagem em busca de pixels foreground\n",
-    "for i in range(1, img.shape[0]-1):\n",
-    "    for j in range(1, img.shape[1]-1):\n",
+    "for i in range(1, img.shape[0]):\n",
+    "    for j in range(1, img.shape[1]):\n",
     "        # Verifica se o pixel atual é foreground e ainda não foi rotulado\n",
     "        if img[i,j] == 255 and out[i,j] == 0:\n",
     "            # Atribui o rótulo à posição atual\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
