--- a/Lab03 - Histogram Equalization/Lab03_hist.ipynb
+++ b/Lab03 - Histogram Equalization/Lab03_hist.ipynb
@@ -193,7 +193,7 @@
     "axs[0].plot(cdf_normalized, color='b')\n",
     "axs[0].hist(img.ravel(), 256, [0, 256], color='r')\n",
     "axs[0].set_xlim([0, 256])\n",
-    "axs[0].set_ylim([0, cdf.max()])\n",
+    "axs[0].set_ylim([0, 5000])\n",
     "axs[0].legend(('Curva de transformação', 'Histograma'))\n",
     "axs[0].set_title('Curva de transformação da imagem original')\n",
     "\n",
@@ -204,7 +204,7 @@
     "axs[1].plot(cdf_normalized_eq, color='b')\n",
     "axs[1].hist(img_eq.ravel(), 256, [0, 256], color='r')\n",
     "axs[1].set_xlim([0, 256])\n",
-    "axs[1].set_ylim([0, cdf_eq.max()])\n",
+    "axs[1].set_ylim([0, 5000])\n",
     "axs[1].legend(('Curva de transformação', 'Histograma'))\n",
     "axs[1].set_title('Curva de transformação da imagem equalizada')\n",
     "\n",
